testsuite/poke.pkl/int-union-type-diag-13.pk
/* { dg-do compile } */

type Foo =
  union uint<32>
  {
    int<32> a;
    offset<int<32>,B> b if a == 2; /* { dg-error "optional.*allowed" } */
  };
